# sol-launchpad

./: .env.example  README.md  next.config.ts  package.json
config/: platform.json
data/: tokens.json
program/: Anchor.toml  README.md
program/programs/launchpad/: Cargo.toml
program/programs/launchpad/src/: lib.rs
scripts/: gen-tokens.mjs  pack-deploy.mjs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/admin/: AdminPanel.tsx
src/app/api/admin/: route.ts
src/app/api/config/: route.ts
src/app/api/holdings/: route.ts
src/app/api/tokens/: route.ts
src/app/api/tokens/[mint]/: route.ts
src/app/api/tokens/[mint]/comments/: route.ts
src/app/api/tokens/[mint]/trade/: route.ts
src/app/coin/[mint]/: CoinPageClient.tsx  page.tsx
src/app/create/: page.tsx
src/components/chart/: PriceChart.tsx
src/components/coin/: CommentForm.tsx  TradeHistory.tsx
src/components/create/: CreateCoinForm.tsx
src/components/dex/: DexTable.tsx  MarketStats.tsx
src/components/layout/: AppShell.tsx  Footer.tsx  Header.tsx  LiveTicker.tsx  MobileNav.tsx  PumpLogo.tsx
src/components/tokens/: BondingProgress.tsx  TokenCard.tsx  TokenFeed.tsx
src/components/trade/: TradePanel.tsx
src/components/ui/: CopyButton.tsx  TokenImage.tsx  WelcomeModal.tsx
src/components/wallet/: WalletButton.tsx  WalletProvider.tsx
src/lib/: avatar.ts  bonding-curve.ts  chart-data.ts  holdings.ts  moderation.ts  seed-tokens.ts  store.ts  types.ts
src/lib/solana/: client-pay.ts  constants.ts  verify-payment.ts
